--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <h1> Animal Shelter</h1>
 
     <h2>Kittens, Puppies, Rabbits and more...</h2>
+
+    <ul>
+        <li>Dogs</li>
+        <li>Cats</li>
+        <li>Rabbits</li>
+        <li>fish</li>
+    </ul>
     
 </body>
 </html>
