--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <a href="/index.html">Home</a>
+    <span>|</span>
+    <a href="about.html">About</a>
+
     <h1> Animal Shelter</h1>
 
     <h2>Kittens, Puppies, Rabbits and more...</h2>
