--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <li>fish</li>
     </ul>
     
-    <img class="home-image" src="/assets/images/puppy.jpeg">
+    <img class="home-image" src="assets/images/puppy.jpeg">
 </body>
 </html>
