--- a/about.html
+++ b/about.html
@@ -14,5 +14,7 @@
     <h1> Animal Shelter</h1>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid corporis animi aperiam ex molestias rem architecto dolorem unde. Similique dignissimos nostrum cum id dolorum suscipit eius eum nihil officia, accusantium pariatur rerum possimus aspernatur ea voluptates eligendi explicabo nisi laudantium. Repellendus nemo quos expedita ea? Unde dolor porro quidem aliquam?</p>
+
+    <p>All Rights Reserved &copy;</p>
 </body>
 </html>
