--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
     </ul>
     
     <img class="home-image" src="assets/images/puppy.jpeg">
+<div class="copyrights">
+    <p>All Rights Reserved &copy;</p>
+</div>
 </body>
 </html>
